--- a/src/components/Banner/Banner.css
+++ b/src/components/Banner/Banner.css
@@ -1,45 +1,57 @@
-
 .banner {
     background-size: cover;
     width: 100%;
     height: fit-content;
     padding-top: 15rem;
-   
+
 }
-.content{
+
+.content {
     width: 80%;
     /* max-width: 10rem; */
     margin-left: 1rem;
     height: fit-content;
 }
-.title{
+
+.title {
     font-size: 4rem;
 }
-.btn-container{
+
+.btn-container {
     display: flex;
 }
-.btn{
+
+.btn {
     border: none;
     padding: 0.5rem 1.5rem;
     margin-right: 1rem;
     border-radius: 5px;
     color: #fff;
     font-weight: 900;
-    background-color: rgba(51 ,51 ,51 , 0.5);
+    background-color: rgba(51, 51, 51, 0.5);
 }
-.btn:hover{
+
+.btn:hover {
     color: #111;
     background-color: #fff;
 }
-.description{
+
+.description {
     margin-top: 1rem;
     font-size: large;
     line-height: 1.5rem;
     max-width: 100%;
 }
-.gradient-div{
+
+.gradient-div {
     width: 100%;
     position: relative;
     height: 7.4rem;
     margin-bottom: 0px;
-    background-image: linear-gradient(180deg,transparent,rgba(37,37,37,.61),#111);}
+    background-image: linear-gradient(180deg, transparent, rgba(37, 37, 37, .61), #111);
+}
+
+.videoViewer {
+    margin-top: 2rem;
+
+}
